fixed vertices for watermelon, centering for weapon box/shots indicator, buttons now fade in to prevent flicker when images get loaded

--- a/war/styles/index.css
+++ b/war/styles/index.css
@@ -50,24 +50,29 @@ a:hover {
 	width: 900px;
 	margin: 0px auto 40px auto;
 	background: #888888;
+	position: relative;
 }
 
 #buttons {
-    position: relative;
-    top: -39px;
-    width: 65px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
     height: 20px;
     padding: 5px;
     background: #EEEEEE;
-    border: 3px groove #112211;
+    border: 3px solid #112211;
+    border-top-right-radius: 8px 8px;
+    -webkit-border-top-right-radius: 8px 8px;
+    -moz-border-top-right-radius: 8px 8px;
     z-index: 1004;
-    display: block; 
+    display: none; 
 }
 
 #nav {
 	text-align: right;
-	position: relative;
-    top: -40px;
+	position: absolute;
+    bottom: -35px;
+    right: 0;
     margin-right: 0;
 	-moz-user-select: text;
 	-khtml-user-select: text;
@@ -102,7 +107,7 @@ a:hover {
 	width: 60%;
 	padding: 10px;
 	background: #EEFFEE;
-	border: 4px groove #112211;
+	border: 4px solid #112211;
 	z-index: 1050;
 	-moz-user-select: text;
 	-khtml-user-select: text;
@@ -115,9 +120,9 @@ a:hover {
 	position: absolute;
 	top: 0;
 	right: 0;
-	border-left: 2px groove #112211;
-	border-bottom: 2px groove #112211;
-	padding: 2px 5px;
+	border-left: 2px solid #112211;
+	border-bottom: 2px solid #112211;
+	padding: 2px 6px;
 	font-weight: bold;
 	font-size: 20px;
 }
